# pyrobox

./: .gitignore  .readthedocs.yaml  CHANGELOG.MD  DATA SAFETY.MD  LICENSE  NOTE.md  Pipfile  README.md  SECURITY PLAN.MD  clone_dir.py  fix_crlf.py  head.html  herd_checker_run.sh  html_page.html  html_script.html  local server.py  local_server.py  pyproject.toml  run_build.py  run_setup.py  script.html  setup.cfg  setup.py  start.sh  video.css  whitelist.txt
.github/: FUNDING.yml
assets/: links.txt  player.js  player.min.js  video.css
build_test_files/: pyproject.toml  run_setup.py  setup.cfg
dev_src/: CODE DIAGRAM.txt  Task flow Diagram.drawio  UX_Tools.py  _arg_parser.py  _exceptions.py  _fs_utils.py  _list_maker.py  _page_templates.py  _sub_extractor.py  _zipfly_manager.py  clone.py  data_types.py  fs_utils.py  global_script.html  global_script.js  html_admin.html  html_error.html  html_file_list.html  html_file_list.js  html_login.html  html_page.html  html_script.html  html_script.js  html_signup.html  html_style.css  html_text_editor.html  html_theme_script.html  html_theme_script.js  html_upload.bkp.html  html_upload.html  html_vid.html  html_zip_page.html  list of all py files.py  local_server (py~3.4).py  local_server 2.py  local_server copy.py  local_server.py  local_server_pyrobox.py  page_handler_script.js  page_templates.py  (+28 more)
dev_src/te-st/: CustomRefresh.html  README.md  Utf-8 test.txt  attack_server.py  msgpack test.py  os-scandir vs os-listdir.py  test_pyrobox_module.py
doc/: readme.md
docs/: conf.py  index.md  version_NOTE.txt
docs/_build/doctrees/: data_safety.doctree  environment.pickle  index.doctree  readme.doctree
hw1-tests/: t10.in  t10.out  t11.in  t11.out  t12.in  t12.out  t15.out  t16.out  t17.out  t3.in  t4.in  t4.out  t5.in  t5.out  t6.in  t6.out  t7.in  t7.out
hw1-tests/outsourced/: t3.in  t3.out  t_error_char.out  t_invalid_escaping.in  t_invalid_escaping.out  t_unclosed_string.in  td1.in  td1.out  td10.in  td10.out  td11.out  td13.in  td14.in  td14.out  td15.in  td15.out  td16.in  td16.out  td17.in  td17.out  td18.in  td18.out  td19.in  td19.out  td2.in  td2.out  td20.in  td20.out  td21.in  td21.out  td22.in  td22.out  td23.in  td23.out  td24.in  td24.out  td25.in  td26.in  td26.out  td27.in  (+16 more)
hw2-tests/: t1.out
hw2_archive/: hw2.exec
pyrobox_Rasan147.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: Get relative.html  __init__.py  __main__.py  _arg_parser.py  _fs_utils.py  _list_maker.py  _page_templates.py  _sub_extractor.py  _zipfly_manager.py  arg_parser.py  clone.py  data_types.py  fs_utils.py  global_script.html  html_admin.html  html_page.html  html_script.html  html_vid.html  html_zip_page.html  local_server (py~3.4).py  local_server.py  localserver test.html  localserver_zipfly.py  page_templates.py  pickledb.py  pyroDB.py  pyroboxCore.py  pyrobox_ServerHost.py  server.py  tools.py  user_mgmt.py  zipfly_local.py
(+10 files in other folders)
