[metadata]
name = pyrobox_Rasan147
version = 0.5.0
authors = Rasan
author_email= wwwqweasd147@gmail.com
description = "A small example package"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RaSan147/py_httpserver_Ult

classifiers = 
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

[options]
package = find:
python-requires = >=3.5
