[metadata]
name = pyrobox
version = 0.9.4
author = Rasan
author_email= wwwqweasd147@gmail.com
description = Personal DropBox for Private Network
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
home_page = https://github.com/RaSan147/pyrobox
project_urls =
    Bug Tracker = https://github.com/RaSan147/pyrobox/issues
    Documentation = https://github.com/RaSan147/pyrobox
    Source Code = https://github.com/RaSan147/pyrobox
    Release Notes = https://github.com/RaSan147/pyrobox/releases


classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Communications :: File Sharing

[options]
python_requires = >=3.7
